samples/_failures_safe/1761708892_a62f9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6f13e7d.c: In function ‘main’:
./samples/SAFE/__tmp_c6f13e7d.c:159:17: error: expected declaration or statement at end of input
  159 |                 if (add_matrices(&a, &b, &result)) {
      |                 ^~
./samples/SAFE/__tmp_c6f13e7d.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6f13e7d.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6f13e7d.c:159:17: error: expected declaration or statement at end of input
